--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.3.3",
     "https-proxy-agent": "^7.0.4",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
+    "react-textarea-autosize": "^8.5.3",
+    "remark": "^15.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
