--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "https-proxy-agent": "^7.0.4",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
+    "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
