--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "remark": "^15.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "sprintf-js": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sprintf-js": "^1.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
