--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.3.3",
     "https-proxy-agent": "^7.0.4",
