--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
     "sprintf-js": "^1.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sprintf-js": "^1.1.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "jest": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^5.13.0",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.4",
     "typescript": "^5"
   }
 }
