--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.3.3",
     "https-proxy-agent": "^7.0.4",
+    "immutable": "^4.3.6",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
@@ -29,7 +30,8 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
-    "sprintf-js": "^1.1.3"
+    "sprintf-js": "^1.1.3",
+    "verror": "^1.10.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -38,6 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sprintf-js": "^1.1.4",
+    "@types/verror": "^1.10.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
