--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "pretest": "cp prisma/dev.db prisma/test.db",
-    "test": "DOTENV_CONFIG_PATH=.test.env jest --setupFiles=dotenv/config"
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
@@ -31,19 +31,24 @@
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "sprintf-js": "^1.1.3",
+    "ts-node": "^10.9.2",
     "verror": "^1.10.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@types/sprintf-js": "^1.1.4",
     "@types/verror": "^1.10.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
