--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "remark-html": "^16.0.1",
     "sprintf-js": "^1.1.3",
     "ts-node": "^10.9.2",
-    "verror": "^1.10.1"
+    "verror": "^1.10.1",
+    "xstate": "^5.13.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
